# fastapicrud

./: README.md  pyproject.toml
studentcrud/: main.py  query.py
tests/: test_main.py  test_query.py
